Fix: display right-menu on small screens

--- a/src/assets/less/header.less
+++ b/src/assets/less/header.less
@@ -121,10 +121,12 @@ a.nav-device {
 }
 
 .header .right {
-  float: right;
+  background-color: @almost-black;
+  position: absolute;
+  right: 0;
+  top: 0;
+
   @media (max-width: @medium-size) {
-    width: 55%;
-    text-align: right;
     .edit { display: none; }
   }
 }
